# ofono-apndb-plugin

./: .gitignore  CMakeLists.txt
debian/: changelog  control  copyright  ofono-apndb-plugin.install  ofono-sailfish-apndb-plugin.install  ofono-ubports-apndb-plugin.install  rules
src/: apndb-provision.c  ubuntu-apndb.c  ubuntu-provision.c
